// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Icon Button Action 1`] = `
.c2 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: currentColor;
  opacity: 0.8;
}

.c2 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c2:hover {
  color: currentColor;
  opacity: 1;
}

.c2:active {
  color: currentColor;
  opacity: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  padding: 0;
  border: 0;
  background: inherit;
  height: 42px;
  border-radius: 90px;
  font-size: 15px;
  line-height: 18px;
  width: auto;
  width: 42px;
  border: 0;
  color: #8da2b5;
  background-color: #fff;
  border: 1px solid transparent;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
  height: 36px;
  width: 36px;
  box-shadow: 0 0 0 1px rgba(17,49,96,0.04),0 2px 4px 0 rgba(17,49,96,0.16);
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
  background: linear-gradient(180deg,rgba(93,157,245,0.14) 0%,rgba(44,133,255,0.205899) 97.03%),#ffffff;
  border: 1px solid #fff;
  color: #5d9df5;
  box-shadow: 0 0 0 1px #fff,0 1px 2px 1px rgba(17,49,96,0.16);
}

.c0:focus,
.c0:active {
  outline: 0;
}

.c0:active {
  background: linear-gradient(180deg,rgba(93,157,245,0.14) 0%,rgba(44,133,255,0.205899) 97.03%),#ffffff;
  border: 1px solid #fff;
  color: #5b9dfa;
  box-shadow: 0 0 0 1px #5b9dfa99 !important;
}

.c0:hover {
  box-shadow: 0 0 0 1px rgba(17,49,96,0.04),0 2px 6px 0 rgba(17,49,96,0.24);
}

.c0:hover {
  box-shadow: 0 0 0 1px #fff,0 2px 4px 1px rgba(17,49,96,0.16);
}

.c3 .c1 {
  color: #fff;
}

.c4 .c1 {
  color: #6e849a;
}

<button
  className="c0"
  disabled={false}
  onClick={[Function]}
>
  <span
    className="c1 c2"
    color="currentColor"
    size={16}
  >
    <svg
      data-file-name="SvgElipsis"
    />
  </span>
</button>
`;

exports[`Storyshots Icon Button Flat 1`] = `
.c2 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: currentColor;
  opacity: 0.8;
}

.c2 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c2:hover {
  color: currentColor;
  opacity: 1;
}

.c2:active {
  color: currentColor;
  opacity: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  padding: 0;
  border: 0;
  background: inherit;
  height: 42px;
  border-radius: 90px;
  font-size: 15px;
  line-height: 18px;
  width: auto;
  width: 42px;
  border: 0;
  color: #8da2b5;
  background-color: #fff;
  border: 1px solid transparent;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
  height: 36px;
  width: 36px;
  background: inherit;
}

.c0:focus,
.c0:active {
  outline: 0;
}

.c0:active {
  background: linear-gradient(180deg,rgba(93,157,245,0.14) 0%,rgba(44,133,255,0.205899) 97.03%),#ffffff;
  border: 1px solid #fff;
  color: #5b9dfa;
  box-shadow: 0 0 0 1px #5b9dfa99 !important;
}

.c0:hover {
  box-shadow: 0 0 0 1px rgba(17,49,96,0.04),0 2px 6px 0 rgba(17,49,96,0.24);
}

.c3 .c1 {
  color: #fff;
}

.c4 .c1 {
  color: #6e849a;
}

<button
  className="c0"
  disabled={false}
  onClick={[Function]}
>
  <span
    className="c1 c2"
    color="currentColor"
    size={16}
  >
    <svg
      data-file-name="SvgElipsis"
    />
  </span>
</button>
`;

exports[`Storyshots Icon Button Normal 1`] = `
.c2 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: currentColor;
  opacity: 0.8;
}

.c2 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c2:hover {
  color: currentColor;
  opacity: 1;
}

.c2:active {
  color: currentColor;
  opacity: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  padding: 0;
  border: 0;
  background: inherit;
  height: 42px;
  border-radius: 90px;
  font-size: 15px;
  line-height: 18px;
  width: auto;
  width: 42px;
  border: 0;
  color: #8da2b5;
  background-color: #fff;
  border: 1px solid transparent;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
  height: 36px;
  width: 36px;
  box-shadow: 0 0 0 1px rgba(17,49,96,0.04),0 2px 4px 0 rgba(17,49,96,0.16);
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c0:focus,
.c0:active {
  outline: 0;
}

.c0:active {
  background: linear-gradient(180deg,rgba(93,157,245,0.14) 0%,rgba(44,133,255,0.205899) 97.03%),#ffffff;
  border: 1px solid #fff;
  color: #5b9dfa;
  box-shadow: 0 0 0 1px #5b9dfa99 !important;
}

.c0:hover {
  box-shadow: 0 0 0 1px rgba(17,49,96,0.04),0 2px 6px 0 rgba(17,49,96,0.24);
}

.c3 .c1 {
  color: #fff;
}

.c4 .c1 {
  color: #6e849a;
}

<button
  className="c0"
  disabled={false}
  onClick={[Function]}
>
  <span
    className="c1 c2"
    color="currentColor"
    size={16}
  >
    <svg
      data-file-name="SvgElipsis"
    />
  </span>
</button>
`;
